infrastructure/netbox/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox
  namespace: netbox
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - netbox.samuelgesang.de
      secretName: netbox-tls
  rules:
    - host: netbox.samuelgesang.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netbox
                port:
                  number: 80
